# alki

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  pyproject.toml  validation_results.json
.github/workflows/: ci.yml
scripts/: demo_quantization.py  test_bundle.py  test_llama.py  test_onnx_export_e2e.py  test_quantization_e2e.py  test_validator.py
src/backends/: README.md
src/cli/: __init__.py  main.py
src/converters/: __init__.py  base.py
src/converters/gguf/: __init__.py  converter.py
src/core/: __init__.py  bundle.py  bundle_builder.py  bundle_manager.py  constants.py  image_builder.py  manifest.py  memory_manager.py  model_detector.py  model_loader.py  onnx_exporter.py  onnx_runtime.py  quantizer.py  registry_publisher.py  runtime.py  tool_manager.py  validator.py
tests/: conftest.py  test_bundle.py  test_bundle_builder.py  test_bundle_integration.py  test_bundle_manager.py  test_cli.py  test_cli_publish.py  test_cli_validate.py  test_gguf_converter.py  test_image_builder.py  test_integration.py  test_memory_manager.py  test_model_detector.py  test_model_loader.py  test_onnx_exporter.py  test_quantizer.py  test_registry_publisher.py  test_runtime.py  test_validator.py
